# TerraEngine

./: .gitignore  CMakeLists.txt  Notes.txt  README.md  Rules.txt  build.bat  imgui.ini  link_errors.txt
assets/shaders/: default.frag  default.vert
docs/: DESIGN_OVERVIEW.md  IMPLEMENTATION_DETAILS.md  TDD.md
src/: gather_code.py
src/Tests/: Test_EntityManager.cpp
src/core/: GameLoop.cpp  GameLoop.h  input.txt  main.cpp  main.h
src/entities/: ComponentPool.h  ComponentPool.inl  Components.h  EntityBuilder.h  EntityManager.cpp  EntityManager.h
src/glad/: glad.c
src/glad/glad/: glad.h
src/imgui/: imconfig.h
src/platform/: IInput.h  SFMLInputSystem.h  Window.cpp  Window.h
src/render/: IOpenGLRenderer.h  IRenderer.h
src/renderer/: IOpenGLRenderer.cpp  IOpenGLRenderer.h  IRenderer.h  Shaders.cpp  shaders.h
src/systems/: CameraSystem.cpp  CameraSystem.h  HeightMap.h  MovmentSystem.cpp  RenderSystem.cpp  RenderSystem.h  TerrainSystem.cpp  TerrainSystem.h
